--- a/workout-logbook/server/package.json
+++ b/workout-logbook/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-modules-server",
+  "name": "modules-server",
   "version": "1.0.0",
   "description": "Workout Log Book",
   "main": "app.js",
